--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<html>
+  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(function(OneSignal) {
@@ -7,3 +8,5 @@
     });
   });
 </script>
+  <h1>TEST WEBSITE</h1>
+</html>
