--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html>
-  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<head>
+  <title>TEST</title>
+</head>
+<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(function(OneSignal) {
@@ -8,5 +10,6 @@
     });
   });
 </script>
+<body>
   <h1>TEST WEBSITE</h1>
-</html>
+</body>
