--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<head>
+<!-- <head>
   <title>TEST</title>
-</head>
+</head> -->
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
@@ -10,6 +10,9 @@
     });
   });
 </script>
-<body>
+<!-- <body>
   <h1>TEST WEBSITE</h1>
-</body>
+</body> -->
+
+
+
