--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!-- <head>
-  <title>TEST</title>
-</head> -->
-<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<html>
+  <head>
+    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(function(OneSignal) {
@@ -10,6 +9,11 @@
     });
   });
 </script>
+  </head>
+  <title>TEST</title>
+  <h1>Welcome to Testing website</h1>
+</html>
+
 <!-- <body>
   <h1>TEST WEBSITE</h1>
 </body> -->
