--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </script>
   </head>
   <title>TEST</title>
-  <h1>Welcome to Testing website</h1>
+  <body><h1>Welcome to Testing website</h1></body>
+  
 </html>
 
 <!-- <body>
